tests/gabc-dump/should-fail/first-linebreak.gabc
name: first linebreak;
%%
(c4) x(z)
